--- a/src/regan-bourland.njk
+++ b/src/regan-bourland.njk
@@ -32,7 +32,7 @@ layout: standard.njk
                     </ul>
                 </li>
                 {%- else %}
-                <li>
+                <li class="no-print">
                     <h3 class="flex-cols">
                         <span>{{ job.title }};</span> 
                         <span>{{ job.company }} 
