--- a/src/_layouts/standard.njk
+++ b/src/_layouts/standard.njk
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Regan Bourland | regan.bourland@gmail.com</title>
         <meta name="description" content="Seeking a full-time Web Development position—remote or local to Denver—ready for an immediate start.">
-        <link rel="icon" type="image/ico" href="/assets/image/favicon.ico">
-        <link href="/assets/style/main.css" rel="stylesheet" type="text/css" inline="inline"/>
+        <link rel="icon" type="image/ico" href="https://14rego.github.io/job-search/assets/image/favicon.ico">
+        <link href="https://14rego.github.io/job-search/assets/style/main.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         {{ content | safe }}
