--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -192,4 +192,8 @@ footer {
     .no-print {
         display: none;
     }
+
+    .skill-grid {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
