some more little tweaks before PDF

--- a/docs/assets/style/main.css
+++ b/docs/assets/style/main.css
@@ -12,7 +12,7 @@ body {
 a,
 h2,
 p strong,
-li strong,
+li > strong,
 .highlight {
     color: #00606B;
 }
@@ -111,7 +111,7 @@ footer {
     a,
     h2,
     p strong,
-    li strong,
+    li > strong,
     .highlight {
         color: #00A5B8;
     }
