--- a/src/regan-bourland.njk
+++ b/src/regan-bourland.njk
@@ -3,7 +3,10 @@ layout: standard.njk
 ---
 <header>
     <h1 class="text-center highlight">Regan Bourland</h1>
-    <p class="text-center"><em class="highlight">he/him/his<br>Seeking a full-time Web Development position—remote or local to Denver—ready for an immediate start.</em></p>
+    <p class="text-center">
+        <span class="highlight">he/him/his</span><br>
+        <em>Seeking a full-time Web Development position—remote or local to Denver—ready for an immediate start.</em>
+    </p>
     <p><strong>Wisdom:</strong> Over 20 years of professional experience in development, design, research, architecture, and&nbsp;leadership.</p>
     <p><strong>Depth:</strong> I build compliant, inclusive, and modern web applications, but I also think beyond just writing code. I understand the business and user goals driving development. My various perspectives are great for bridging communication gaps between roles and/or teams; technical and non-technical.</p>
     <p><strong>Diversity:</strong> My expertise spans modern stacks, complemented by a strong background in enterprise legacy systems. I'm great at pattern recognition, allowing me to step into almost any stack or environment and succeed. This allows me to hit the ground running.</p>
